updated HTML and CSS to fix alignments/style it up

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -5,6 +5,41 @@ html {
   background-color: #000000;
 }
 
+body {
+  background-color: rgba(0, 0, 0, 0.7);
+  margin: 0;
+  padding: 35px;
+}
+
+
+h1 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  text-align: center;
+  color: #ffffff;
+  letter-spacing: 12px;
+  margin-bottom: 25px;
+  text-transform: uppercase;
+  font-size: 44px;
+}
+
+a {
+  font-family: 'Lato', sans-serif;
+  color:rgba(234,215,65,0.6);
+  text-transform: uppercase;
+  text-decoration: none;
+
+}
+a:hover {
+  font-family: 'Lato', sans-serif;
+  color: rgb(234,215,65);
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+p:last-child {
+  padding-bottom: 100px;
+}
 
 
 .output {
@@ -12,7 +47,7 @@ html {
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin: auto;
     flex-grow: 1;
@@ -23,25 +58,25 @@ html {
   }
 
 .output ul {
-      display: flex;
-      flex-wrap: wrap;
-  position: relative;
-  justify-content: center;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   align-items: center;
-      width: 96%;
-      max-width: 300px;
-      margin: auto;
-      margin-block-start: auto;
-      margin-block-end: auto;
-      margin-inline-start: auto;
-      margin-inline-end: auto;
-      padding-inline-start: 0px;
-      border-radius: 33px;
-      background-color: rgba(0, 0, 0, 0.92);
-      margin-bottom: 45px;
-      box-shadow: 6px 6px 18px rgba(0, 0, 0, 0.2);
-      border: 1px solid rgba(0, 0, 0, 0.2);
-      overflow: hidden;
+  width: 96%;
+  max-width: 300px;
+  margin: auto;
+  margin-block-start: auto;
+  margin-block-end: auto;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  padding-inline-start: 0px;
+  border-radius: 33px;
+  background-color: rgba(0, 0, 0, 0.92);
+  margin-bottom: 45px;
+  box-shadow: 6px 6px 18px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  overflow: hidden;
   }
 
  
@@ -72,7 +107,8 @@ html {
 
 .output li:nth-child(2) {
     margin-top: 10px;
-    width: 90%;
+    padding-left: 5%;
+    padding-right: 5%;
     font-weight: bold;
     font-family: 'Lato', sans-serif;
     font-size: 22px;
@@ -119,7 +155,8 @@ html {
   align-content: center;
   justify-content: center;
   width: 96%;
-  background-color: rgba(0, 0, 0, 0.92);
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
   margin-block-start: auto;
   margin-block-end: auto;
   margin-inline-start: auto;
@@ -128,6 +165,7 @@ html {
   overflow: auto;
   color: #ffffff;
   border-radius: 60px;
+  text-align: center;
 }
 
 .details img {
@@ -139,12 +177,12 @@ html {
   margin: auto;
 }
 
-.details h1, p {
+/* .details h1, p {
   text-align: center;
   display: block;
   width: 100%;
   max-width: 300px;
-}
+} */
 
 .details .container {
   margin: 20px;
@@ -179,25 +217,51 @@ html {
   margin-bottom: 10px;
 }
 
+.homepage {
+  max-width: 300px;
+  text-align: center;
+  display: block;
+  /* flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 300px;  */
+}
+
+.homepage h1 {
+  padding-top: 15%;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.homepage p:last-child {
+  padding-bottom: 0;
+}
+
 
 @media (min-width: 640px){ 
 
-  .details h1, .details p {
-    text-align: left;
-    display: block;
-    width: 100%;
-    max-width: 1080px;
+.details h1, .details p {
+  text-align: left;
+  display: block;
+  width: 100%;
+  max-width: 1080px;
 }
 
-  .details img {
-    display: block;
-    float: left;
-    width: 100%;
-    max-width: 300px;
-    border-radius: 33px;
-    margin-right: 50px;
-    margin-bottom: 50px;
-  }
+.details p {
+  font-weight: 200;
+}
+
+.details img {
+  display: block;
+  float: left;
+  width: 100%;
+  max-width: 300px;
+  border-radius: 33px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+}
 
 html {
   background-image: url(../images/PopcornBG_1920x1080.jpg);
@@ -205,11 +269,12 @@ html {
   background-size: cover;
 }
 
+
 .output {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
+  justify-content: flex-start;
   position: relative;
-  justify-content: center;
   margin: 0 auto;
   align-items: center;
   flex-grow: 1;
@@ -221,9 +286,9 @@ html {
 .output ul {
   width: 96%;
   display: flex;
+  justify-content: flex-start;
   flex-wrap: wrap;
   position: relative;
-  justify-content: center;
   align-items: center;
   max-width: 300px;
   margin-block-start: auto;
@@ -247,7 +312,6 @@ html {
   align-items: center;
 }
 
-
 .output img {
 width: 100%;
 max-width: 300px;
@@ -256,6 +320,27 @@ max-width: 300px;
 .details .container {
   margin-left: 100px;
   margin-right: 100px;
+  max-width: 1080px;
+}
+
+.homepage {
+  max-width: 1080px;
+  text-align: center;
+  display: block;
+  /* flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 600px;  */
+}
+
+.homepage p {
+  text-align: center;
+}
+
+.homepage p:last-child {
+  padding-bottom: 0;
 }
 
 .details .imdb-logo img {
@@ -264,4 +349,10 @@ max-width: 300px;
   margin-right: 6px;
   margin-bottom: 0;
   border-radius: none;
+}
+
+.homepage h1 {
+  padding-top: 15%;
+  margin-bottom: 0;
+  text-align: center;
 }
